--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "dependencies": {
     "next": "9.2.1",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "tailwindcss": "^1.2.0"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.0.6",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0"
   }
 }
