--- a/package.json
+++ b/package.json
@@ -8,14 +8,37 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.2.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "tailwindcss": "^1.2.0"
+    "next": "9.3.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "tailwindcss": "1.2.0"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.0.6",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0"
+    "@fullhuman/postcss-purgecss": "2.1.2",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
+    "babel-eslint": "10.x",
+    "eslint": "6.x",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-config-react-app": "5.2.1",
+    "eslint-plugin-flowtype": "4.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "2.x",
+    "husky": "4.2.5",
+    "lint-staged": "10.1.6",
+    "postcss-import": "12.0.1",
+    "postcss-preset-env": "6.7.0",
+    "prettier": "2.0.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   }
 }
