--- a/package.json
+++ b/package.json
@@ -8,30 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.3.5",
+    "next": "9.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "tailwindcss": "1.2.0"
+    "tailwindcss": "1.4.6"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "2.1.2",
-    "@typescript-eslint/eslint-plugin": "2.x",
-    "@typescript-eslint/parser": "2.x",
-    "babel-eslint": "10.x",
-    "eslint": "6.x",
-    "eslint-config-prettier": "6.10.1",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.0.0",
+    "eslint-config-prettier": "6.11.0",
     "eslint-config-react-app": "5.2.1",
-    "eslint-plugin-flowtype": "4.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-flowtype": "4.7.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.3",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "2.x",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.2",
     "husky": "4.2.5",
-    "lint-staged": "10.1.6",
+    "lint-staged": "10.2.2",
     "postcss-import": "12.0.1",
     "postcss-preset-env": "6.7.0",
-    "prettier": "2.0.4"
+    "prettier": "2.0.5"
   },
   "husky": {
     "hooks": {
