--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwind-nextjs",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,22 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.0",
+    "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "tailwindcss": "1.5.2"
+    "tailwindcss": "1.7.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "3.9.1",
+    "@typescript-eslint/parser": "3.9.1",
     "babel-eslint": "10.1.0",
-    "eslint": "7.5.0",
+    "eslint": "7.7.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-react-app": "5.2.1",
     "eslint-plugin-flowtype": "5.2.0",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-react": "7.20.4",
-    "eslint-plugin-react-hooks": "4.0.8",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-react-hooks": "4.1.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.11",
     "postcss-import": "12.0.1",
